third semester(fall 2023)/OOP 244/Project/ms2/milestone 2/errors.txt
AidMan.cpp:86:18: error: definition of implicitly-declared ‘sdds::AidMan::~AidMan()’
  AidMan::~AidMan()
                  ^
